# poweramp2mixxx

./: README.md  pyproject.toml
src/poweramp2mixxx/: __init__.py  cli.py  importer.py  matcher.py  mixxx.py  models.py  poweramp.py  reports.py
tests/: conftest.py  test_importer.py  test_matcher.py  test_mixxx.py  test_poweramp.py
