[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poweramp2mixxx"
version = "0.1.0"
description = "Import Poweramp SQLite ratings into an existing Mixxx database"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
authors = [{name = "import-scripts"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = []

[project.scripts]
poweramp2mixxx = "poweramp2mixxx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
